<package>
  <name>mpc_planner</name>
  <version>0.1.0</version>
  <description>
    This package contains a mpc controller for the linefollowing
  </description>
  <author>Timo Schoenegg</author>
  <maintainer email="timoscho@student.ethz.ch">Timo Schoenegg</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>torch</run_depend>
  <run_depend>mpc</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>tqdm</run_depend>

  <run_depend>geometry_msgs</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  
  <!-- to get custom made message -->
  <build_depend>reference_state_generator</build_depend>

  <export>
  </export>

</package>